<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/margin_medium"
    app:contentPaddingBottom="@dimen/margin_xlarge"
    app:contentPaddingLeft="@dimen/margin_xlarge"
    app:contentPaddingRight="@dimen/margin_xlarge"
    app:contentPaddingTop="@dimen/margin_xlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:text="@string/fragment_user_profile_confirm_logout_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_confirm_log_yes_button"
                style="@style/defaultGradientButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_yes" />


            <Button
                android:id="@+id/dialog_confirm_log_no_button"
                style="@style/defaultStrokeButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_weight="1"
                android:text="@string/common_no" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>